[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyjolt"
version = "0.1.0"
description = "High-performance Python implementation of the JOLT JSON-to-JSON transformation library"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "PyJolt Contributors" }]
keywords = ["json", "transform", "jolt", "data", "etl", "mapping"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: General",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/sthitaprajnas/pyjolt"
Repository = "https://github.com/sthitaprajnas/pyjolt"
Issues = "https://github.com/sthitaprajnas/pyjolt/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pyjolt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
strict = true
python_version = "3.10"
files = ["src/pyjolt"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.coverage.run]
source = ["src/pyjolt"]

[tool.coverage.report]
show_missing = true
