[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ---------------------------------------------------------------------------
# Project metadata
# ---------------------------------------------------------------------------

[project]
name = "jolt-py"
version = "1.2.0"
description = "High-performance, pure-Python implementation of the JOLT JSON-to-JSON transformation library"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Sthitaprajna Sahoo", email = "papu.sahoo@gmail.com" }]
maintainers = [{ name = "Sthitaprajna Sahoo", email = "papu.sahoo@gmail.com" }]
keywords = [
    "json",
    "jolt",
    "transform",
    "data",
    "etl",
    "mapping",
    "pipeline",
    "shift",
    "chainr",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: General",
    "Topic :: Utilities",
    "Typing :: Typed",
]

[project.urls]
Homepage      = "https://github.com/sthitaprajnas/pyjolt"
Repository    = "https://github.com/sthitaprajnas/pyjolt"
Documentation = "https://github.com/sthitaprajnas/pyjolt#readme"
Changelog     = "https://github.com/sthitaprajnas/pyjolt/blob/main/CHANGELOG.md"
Issues        = "https://github.com/sthitaprajnas/pyjolt/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.4",
    "build>=1.0",
    "twine>=5.0",
]

[project.scripts]
pyjolt = "pyjolt.cli:main"

# ---------------------------------------------------------------------------
# Build
# ---------------------------------------------------------------------------

[tool.hatch.build.targets.wheel]
packages = ["src/pyjolt"]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "tests/",
    "LICENSE",
    "NOTICE",
    "CHANGELOG.md",
    "CONTRIBUTING.md",
    "README.md",
    "pyproject.toml",
]

# ---------------------------------------------------------------------------
# Tooling
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"

[tool.mypy]
strict         = true
python_version = "3.10"
files          = ["src/pyjolt"]

[tool.ruff]
line-length    = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.coverage.run]
source = ["src/pyjolt"]

[tool.coverage.report]
show_missing  = true
skip_covered  = false
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "@(abc\\.)?abstractmethod",
]
